<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.wjb</groupId>
  <artifactId>zero</artifactId>
  <version>${com.wjb.zero.version}</version>
  <packaging>pom</packaging>
  
  <name>zero</name>
  <description>prototype</description>
  
  <properties>
    <com.wjb.zero.version>1.0.0-SNAPSHOT</com.wjb.zero.version>
	<org.springframework.version>4.2.5.RELEASE</org.springframework.version>
	<org.hibernate.version>5.1.0.Final</org.hibernate.version>
	
	<deploy.home>${env.TOMCAT_HOME}/webapps</deploy.home>
  </properties>
  
  <modules>
  	<module>zero-jpa</module>
  	<module>zero-service</module>
  	<module>zero-app</module>
  	<module>zero-mvc</module>
  	<module>zero-util</module>
  </modules>
  
  <dependencyManagement>
      <dependencies>
  <!-- Spring Framework Configuration -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-core</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-beans</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context-support</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-expression</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-web</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
  <!-- Spring Framework Configuration End. -->
  
  <!-- Spring Framework jpa -->
  	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-jdbc</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-tx</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-orm</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-oxm</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-jms</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
 	  <dependency>
		<groupId>org.springframework.data</groupId>
		<artifactId>spring-data-jpa</artifactId>
		<version>1.10.2.RELEASE</version>
	  </dependency>
	  
	  <!-- hibernate jpa  -->
	  <dependency>
		<groupId>org.hibernate</groupId>
		<artifactId>hibernate-entitymanager</artifactId>
		<version>${org.hibernate.version}</version>
	  </dependency>
	  <!-- oracle deriver -->
 	  <dependency>
		<groupId>com.oracle</groupId>
		<artifactId>ojdbc7</artifactId>
		<version>12.1.0.1</version>
	  </dependency>
  <!-- Spring Framework jpa End. -->
  
  <!-- Spring Framework mvc -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-webmvc</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-websocket</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-webmvc-portlet</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
  <!-- Spring Framework mvc End. -->
  
  <!-- Spring Framework test -->
  	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
  <!-- Spring Framework test End. -->
  
  
  <!-- Zero Util -->
   	  <dependency>
		<groupId>com.wjb</groupId>
		<artifactId>zero-util</artifactId>
		<version>${com.wjb.zero.version}</version>
	  </dependency>
  	</dependencies>
  </dependencyManagement>
  
  
  
  <dependencies>
     <!-- Junit 4 -->
    	<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
  	<!-- Spring Framework Configuration -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-core</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-beans</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context-support</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-expression</artifactId>
	  </dependency>
      <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-web</artifactId>
	  </dependency>  
  <!-- Spring Framework Configuration End. -->
  
  <!-- Spring Framework jpa -->
      <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-jdbc</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-tx</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-orm</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-oxm</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-jms</artifactId>
	  </dependency>	  
  	  <dependency>
		<groupId>org.springframework.data</groupId>
		<artifactId>spring-data-jpa</artifactId>
	  </dependency>
	  <!-- datasource -->
  	  <dependency>
		<groupId>commons-dbcp</groupId>
		<artifactId>commons-dbcp</artifactId>
		<version>1.4</version>
	  </dependency>
	  <dependency>
		<groupId>commons-pool</groupId>
		<artifactId>commons-pool</artifactId>
		<version>1.5.4</version>
	  </dependency>
	  <!-- hibernate jpa  -->
	  <dependency>
	    <groupId>org.hibernate</groupId>
		<artifactId>hibernate-entitymanager</artifactId>
	  </dependency>
	  <!-- oracle deriver -->	  
	  <dependency>
		<groupId>com.oracle</groupId>
		<artifactId>ojdbc7</artifactId>
	  </dependency>
  <!-- Spring Framework jpa End. -->
  
  <!-- Spring Framework mvc -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-webmvc</artifactId>
	  </dependency>
  
    <!-- servlet configuration -->
    <dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>javax.servlet-api</artifactId>
		<version>3.1.0</version>
		<type>jar</type>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>jstl</artifactId>
		<version>1.2</version>
	</dependency>
	<dependency>
		<groupId>taglibs</groupId>
		<artifactId>standard</artifactId>
		<version>1.1.2</version>
	</dependency>
	<dependency>
		<groupId>javax.servlet.jsp</groupId>
		<artifactId>jsp-api</artifactId>
		<version>2.2</version>
		<type>jar</type>
		<scope>provided</scope>
	</dependency>
  <!-- Spring Framework mvc End. -->
    <!-- Spring Framework test -->
  	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
	  </dependency>
  <!-- Spring Framework test End. -->
  
  
  		<!-- apache commons dependency -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.1</version>
        </dependency>
		
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.2</version>
		</dependency>
		<dependency>
		    <groupId>commons-beanutils</groupId>
		    <artifactId>commons-beanutils</artifactId>
		    <version>1.9.3</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>3.3</version>
		</dependency>
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
		   <groupId>commons-fileupload</groupId>
		   <artifactId>commons-fileupload</artifactId>
		   <version>1.3.2</version> 
		</dependency>
		<!-- apache commons dependency end.-->
		
		<!-- json util.-->
		<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.3</version>
			<classifier>jdk15</classifier>
			<exclusions>
				<exclusion>
					<groupId>commons-collections</groupId>
					<artifactId>commons-collections</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- json util.-->
		
		<!-- csv util.-->
		<dependency>
            <groupId>net.sourceforge.javacsv</groupId>
            <artifactId>javacsv</artifactId>
            <version>2.0</version>
        </dependency>
        <!-- csv util.-->
		
		<!-- mail util -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<!-- mail util -->
  
  </dependencies>
  
  <build>
  	<pluginManagement>
  		<plugins>
  			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
			</plugin>
			
			<plugin>
                <groupId>org.apache.maven.shared</groupId>
                <artifactId>maven-filtering</artifactId>
                <version>1.3</version>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			
			<plugin>
	            <groupId>org.apache.tomcat.maven</groupId>
	            <artifactId>tomcat8-maven-plugin</artifactId>
	            <version>2.2</version>
	        </plugin>
	        
	        <plugin>
			    <groupId>org.mortbay.jetty</groupId>
			    <artifactId>maven-jetty-plugin</artifactId>
			    <version>6.1.1</version>
			</plugin>    
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.5</version>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.9</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
			</plugin>			
  		</plugins>
  	</pluginManagement>
  	<plugins>
		<plugin>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
				<source>1.8</source>
				<target>1.8</target>
				<compilerVersion>1.8</compilerVersion>
			</configuration>
		</plugin>
		<plugin>
			<artifactId>maven-surefire-plugin</artifactId>
			<configuration>
				<argLine>-Xmx=512m -XX:MaxPermSize=256m</argLine>
				<forkMode>once</forkMode>
				<argLine>-enableassertions</argLine>
				<testFailureIgnore>true</testFailureIgnore>
				<parallel>methods</parallel>
				<threadCount>1</threadCount>
			</configuration>
		</plugin>

	</plugins>
  </build>
  
  	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<property>
					<name>dev</name>
				</property>
			</activation>
			<properties>
				<!-- Zero Database Server -->
  				<datasource.jdbc.url>jdbc:oracle:thin:@localhost:1521/ORCL</datasource.jdbc.url>
				<datasource.user>zero_dev</datasource.user>
				<datasource.password>zero_1234</datasource.password>  
				<datasource.hibernate.show.sql>true</datasource.hibernate.show.sql>
			</properties>
		</profile>
	</profiles>	
</project>